--- a/SBA-BACKEND/SBA-BACKEND.csproj
+++ b/SBA-BACKEND/SBA-BACKEND.csproj
@@ -14,10 +14,14 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.5" />
         <PackageReference Include="MySql.EntityFrameworkCore" Version="5.0.3" />
         <PackageReference Include="NSwag.Annotations" Version="13.10.9" />
+        <PackageReference Include="NUnit" Version="3.13.2" />
+        <PackageReference Include="Selenium.Support" Version="3.141.0" />
+        <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
+        <PackageReference Include="Selenium.WebDriverBackedSelenium" Version="3.141.0" />
+        <PackageReference Include="SpecFlow" Version="3.9.22" />
         <PackageReference Include="Swashbuckle" Version="5.6.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
         <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.1.4" />
-        <PackageReference Include="Swashbuckle.Core" Version="5.6.0" />
   </ItemGroup>
 
   <ItemGroup>
