--- a/SBA-BACKEND/appsettings.json
+++ b/SBA-BACKEND/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
-}
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=3306;database=sba;uid=root;password=",
+    "SmarterAspMySQLConnection": "Server=MYSQL5045.site4now.net;Database=db_a76242_tunel2;Uid=a76242_tunel2;Pwd=root1234",
+    "HerokuConnectionMySQL": "Server=us-cdbr-east-04.cleardb.com;Database=heroku_1f1b292e9b0196e;Uid=b3116240b5df9d;Pwd=f30e6ad2"
+  },
+    "AllowedHosts": "*"
+  }
