--- a/SBA-BACKEND/appsettings.json
+++ b/SBA-BACKEND/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    //"DefaultConnection": "server=localhost;port=3306;database=sba;uid=root;password=xXDdXDdxD",
+    //"DefaultConnection": "server=localhost;port=3306;database=sba;uid=root;password=xXDdXDdxD" XDXD,
     "SmarterAspMySQLConnection": "Server=MYSQL8001.site4now.net;Database=db_a879ed_sbadb;Uid=a879ed_sbadb;Pwd=Elpanafresco3001"
     //"HerokuConnectionMySQL": "Server=us-cdbr-east-04.cleardb.com;Database=heroku_1f1b292e9b0196e;Uid=b3116240b5df9d;Pwd=f30e6ad2"
   },
