--- a/SBA-BACKEND/appsettings.json
+++ b/SBA-BACKEND/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    //"DefaultConnection": "server=localhost;port=3306;database=sba;uid=root;password=xXDdXDdxD" XDXD,
+    //"DefaultConnection": "server=localhost;port=3306;database=jesussexo;uid=root;password=admin"
+    //"XDXD"
     "SmarterAspMySQLConnection": "Server=MYSQL8001.site4now.net;Database=db_a879ed_sbadb;Uid=a879ed_sbadb;Pwd=Elpanafresco3001"
     //"HerokuConnectionMySQL": "Server=us-cdbr-east-04.cleardb.com;Database=heroku_1f1b292e9b0196e;Uid=b3116240b5df9d;Pwd=f30e6ad2"
   },
