--- a/SBA-BACKEND/appsettings.json
+++ b/SBA-BACKEND/appsettings.json
@@ -6,8 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-    "ConnectionStrings": {
-      "SmarterAspMySQLConnection": "Server=MYSQL8001.site4now.net;Database=db_a879ed_sbadb;Uid=a879ed_sbadb;Pwd=Elpanafresco3001"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=MYSQL8001.site4now.net;Database=db_a879ed_sbadb;Uid=a879ed_sbadb;Pwd=Elpanafresco3001"
+  },
   "AllowedHosts": "*"
 }
