fix: refactor database

--- a/SBA-BACKEND/appsettings.json
+++ b/SBA-BACKEND/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=MYSQL8001.site4now.net;Database=db_a879ed_sbadb;Uid=a879ed_sbadb;Pwd=Elpanafresco3001"
+    //"DefaultConnection": "Server=MYSQL8001.site4now.net;Database=db_a879ed_sbadb;Uid=a879ed_sbadb;Pwd=Elpanafresco3001"
+    "DefaultConnection": "Server=MYSQL8001.site4now.net;Database=db_a879ed_sba;Uid=a879ed_sba;Pwd=admin123"
   },
   "AllowedHosts": "*"
 }
