--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,3 +23,10 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test
+      
+    - name: Docker build
+      run: docker login --username=_ --password=${{secrets.HEROKU_API_KEY}} registry.heroku.com
+    - name: Publish
+      run: |
+        heroku container:push web -a ${{secrets.HEROKU_APP_NAME}}
+        heroku container:release web -a ${{secrets.HEROKU_APP_NAME}}
